--- a/package.json
+++ b/package.json
@@ -25,5 +25,18 @@
     "sass-embedded": "^1.89.0",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2"
-  }
+  },
+  "description": "This template should help get you started developing with Vue 3 in Vite.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/elgrig/skypro-kanban25.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/elgrig/skypro-kanban25/issues"
+  },
+  "homepage": "https://github.com/elgrig/skypro-kanban25#readme"
 }
